--- a/src/client/pages/pokemon/styles.scss
+++ b/src/client/pages/pokemon/styles.scss
@@ -1,4 +1,5 @@
 .pokemon {
+  position: absolute;
 }
 
 .list {
@@ -14,20 +15,15 @@
   width: 359px;
   height: 500px;
   perspective: 1000px;
-  background-color: red;
-}
-
-.selected {
-  background-color: transparent;
+  transition: 2s ease-out;
 }
 
 .selectedCard {
-  top: 0;
-  left: 0;
+  left: 50%;
+  transform: translate(-40%, -10%) scale(1.5) rotateY(360deg);
   position: absolute;
-  width: 200%;
-  height: 200%;
+  width: 359px;
+  height: 500px;
   perspective: 1000px;
-  background-color: blue;
   z-index: 9999;
 }
